--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
                     <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="./assets/deer.jpg">
-                        <img src="./assets/deer.jpg" class="img-responsive" alt="Image 1">
+                        <img src="deer.jpg" class="img-responsive" alt="Image 1">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
@@ -128,7 +128,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="./assets/beach.jpg">
-                        <img src="./assets/beach.jpg" class="img-responsive" alt="Image 2">
+                        <img src="beach.jpg" class="img-responsive" alt="Image 2">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
@@ -141,7 +141,7 @@
 				<div class="clearfix hidden-lg"> </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="./assets/lake.jpg">
-                        <img src="./assets/lake.jpg" class="img-responsive" alt="Image 3">
+                        <img src="lake.jpg" class="img-responsive" alt="Image 3">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
@@ -153,7 +153,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="./assets/bike.jpg">
-                        <img src="./assets/bike.jpg" class="img-responsive" alt="Image 4">
+                        <img src="bike.jpg" class="img-responsive" alt="Image 4">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
@@ -166,7 +166,7 @@
 				<div class="clearfix hidden-lg"> </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="./assets/city.jpg">
-                        <img src="./assets/city.jpg" class="img-responsive" alt="Image 5">
+                        <img src="city.jpg" class="img-responsive" alt="Image 5">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
@@ -178,7 +178,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="./assets/colors.jpg">
-                        <img src="./assets/colors.jpg" class="img-responsive" alt="Image 6">
+                        <img src="colors.jpg" class="img-responsive" alt="Image 6">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
