--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="header-content">
             <div class="inner">
                 <h1 class="cursive">Simple, One Page Design</h1>
-                <h4>A free landing page theme with video background</h4>
+                <h4>I don't know how to add a background image</h4>
                 <hr>
             </div>
         </div>
