--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="animate.min.css" />
     <link rel="stylesheet" href="ionicons.min.css" />
     <link rel="stylesheet" href="styles.css" />
-  </head>./
+  </head>
   <body>
     <nav id="topNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
