--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#first"><i class="ion-ios-analytics-outline"></i> Landing Zero</a>
+                <a class="navbar-brand page-scroll" href="#first"><i class="ion-ios-analytics-outline"></i> Grey Matters</a>
             </div>
             <div class="navbar-collapse collapse" id="bs-navbar">
                 <ul class="nav navbar-nav">
@@ -47,8 +47,8 @@
     <header id="first">
         <div class="header-content">
             <div class="inner">
-                <h1 class="cursive">Simple, One Page Design</h1>
-                <h4>I don't know how to add a background image</h4>
+                <h1 class="cursive">Connecting People and Science</h1>
+                <h4>Helping the world of science reach out to the everday person</h4>
                 <hr>
             </div>
         </div>
@@ -57,10 +57,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 text-center">
-                    <h2 class="margin-top-0 text-primary">Built On The Bootstrap Grid</h2>
+                    <h2 class="margin-top-0 text-primary">Grey Matters Story</h2>
                     <br>
                     <p class="text-faded">
-                        Bootstrap's responsive grid comes in 4 sizes or "breakpoints": tiny (xs), small(sm), medium(md) and large(lg). These 4 grid sizes enable you create responsive layouts that behave accordingly on different devices.
+			We are a team of four Informatics Students at the University of Washington, brought together by the 2018 
+			Informatics Capstone. For our project, we worked in conjunction with the on campus neuroscience journal, 
+			Grey Matters. Together, we identified the problem of the communication gap between the scientific communtiy 
+			and the general public. Our solution is the design and development of a content management system that made 
+			it easy for scientists to upload content and for users to consume the content. At the end of our project, we 
+			passed off the system to the Grey Matters journal, where they could use the system with the content they create.
                     </p>
                     <a href="#three" class="btn btn-default btn-xl page-scroll">Learn More</a>
                 </div>
@@ -71,7 +76,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="margin-top-0 text-primary">Flexible Layouts</h2>
+                    <h2 class="margin-top-0 text-primary">Our Products</h2>
                     <hr class="primary">
                 </div>
             </div>
@@ -81,22 +86,25 @@
                 <div class="col-lg-4 col-md-4 text-center">
                     <div class="feature">
                         <i class="icon-lg ion-android-laptop wow fadeIn" data-wow-delay=".3s"></i>
-                        <h3>Responsive</h3>
-                        <p class="text-muted">Your site looks good everywhere</p>
+                        <h3>The Dashboard</h3>
+                        <p class="text-muted">The dashboard allows Grey Matters to upload their content to the connected app
+			    in an easily understood and manageable way</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 text-center">
                     <div class="feature">
                         <i class="icon-lg ion-social-sass wow fadeInUp" data-wow-delay=".2s"></i>
-                        <h3>Customizable</h3>
-                        <p class="text-muted">Easy to theme and customize with SASS</p>
+                        <h3>The App</h3>
+                        <p class="text-muted">The app auto-populates with information uploaded to the dashboard and displays
+			    the information for users to read and digest</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 text-center">
                     <div class="feature">
                         <i class="icon-lg ion-ios-star-outline wow fadeIn" data-wow-delay=".3s"></i>
-                        <h3>Consistent</h3>
-                        <p class="text-muted">A mature, well-tested, stable codebase</p>
+                        <h3>The API</h3>
+                        <p class="text-muted">The API allows for easy customization after handoff and also allows other developers
+			    to use our content to create their own dashboard and app tailored to their needs</p>
                     </div>
                 </div>
             </div>
