--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
             <div class="row">
                 <div class="col-lg-4 col-md-4 text-center">
                     <div class="feature">
-                        <i class="icon-lg ion-android-laptop wow fadeIn" data-wow-delay=".3s"></i>
+			<img src="computer.png" class="icon-lg" alt="Image 1">
+                        <!-- <i class="icon-lg ion-android-laptop wow fadeIn" data-wow-delay=".3s"></i> -->
                         <h3>The Dashboard</h3>
                         <p class="text-muted">The dashboard allows Grey Matters to upload their content to the connected app
 			    in an easily understood and manageable way</p>
@@ -93,7 +94,8 @@
                 </div>
                 <div class="col-lg-4 col-md-4 text-center">
                     <div class="feature">
-                        <i class="icon-lg ion-social-sass wow fadeInUp" data-wow-delay=".2s"></i>
+                        <!--<i class="icon-lg ion-social-sass wow fadeInUp" data-wow-delay=".2s"></i>-->
+			<img src="phone.svg" class="icon-lg" alt="Image 1">
                         <h3>The App</h3>
                         <p class="text-muted">The app auto-populates with information uploaded to the dashboard and displays
 			    the information for users to read and digest</p>
@@ -101,7 +103,8 @@
                 </div>
                 <div class="col-lg-4 col-md-4 text-center">
                     <div class="feature">
-                        <i class="icon-lg ion-ios-star-outline wow fadeIn" data-wow-delay=".3s"></i>
+                        <!--<i class="icon-lg ion-ios-star-outline wow fadeIn" data-wow-delay=".3s"></i>-->
+			<img src="gears.png" class="icon-lg" alt="Image 1">
                         <h3>The API</h3>
                         <p class="text-muted">The API allows for easy customization after handoff and also allows other developers
 			    to use our content to create their own dashboard and app tailored to their needs</p>
