--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <div class="col-lg-4 col-md-4 text-center">
                     <div class="feature">
                         <!--<i class="icon-lg ion-social-sass wow fadeInUp" data-wow-delay=".2s"></i>-->
-			<img src="phone.svg" class="icon-lg" alt="Image 1">
+			<img src="Phone.png" class="icon-lg" alt="Image 1">
                         <h3>The App</h3>
                         <p class="text-muted">The app auto-populates with information uploaded to the dashboard and displays
 			    the information for users to read and digest</p>
