--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-4 text-center">
                     <div class="feature">
-			<img src="computer.png" class="icon-lg" alt="Image 1">
+			<img src="Computer.png" class="icon-lg" alt="Image 1">
                         <!-- <i class="icon-lg ion-android-laptop wow fadeIn" data-wow-delay=".3s"></i> -->
                         <h3>The Dashboard</h3>
                         <p class="text-muted">The dashboard allows Grey Matters to upload their content to the connected app
