--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
                 </div>
 				<div class="clearfix hidden-lg"> </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="city.jpg">
-                        <img src="city.jpg" class="img-responsive" alt="Image 5">
+                    <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="Dashboard 1.png">
+                        <img src="Dashboard 1.png" class="img-responsive" alt="Image 5">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
@@ -179,8 +179,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="colors.jpg">
-                        <img src="colors.jpg" class="img-responsive" alt="Image 6">
+                    <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="Dashboard 2.png">
+                        <img src="Dashboard 2.png" class="img-responsive" alt="Image 6">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
