--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="col-lg-4 col-md-4 text-center">
                     <div class="feature">
                         <!--<i class="icon-lg ion-ios-star-outline wow fadeIn" data-wow-delay=".3s"></i>-->
-			<img src="gears.png" class="icon-lg" alt="Image 1">
+			<img src="Gears.png" class="icon-lg" alt="Image 1">
                         <h3>The API</h3>
                         <p class="text-muted">The API allows for easy customization after handoff and also allows other developers
 			    to use our content to create their own dashboard and app tailored to their needs</p>
