--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
 			<img src="Computer.png" class="icon-lg" alt="Image 1">
                         <h3>The Dashboard</h3>
                         <p class="text-muted">The dashboard allows Grey Matters to upload their content to the connected app
-			    in an easily understood and manageable way</p>
+			    in an easily understood and manageable way. They can upload and manage articles, podcasts, events, 
+			    glossary terms, and users. Overall, the dashboard allows groups to easily update their apps content
+			    and make intelligent desicions based on the analytics from their content. </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 text-center">
@@ -93,7 +95,10 @@
 			<img src="Phone.png" class="icon-lg" alt="Image 2">
                         <h3>The App</h3>
                         <p class="text-muted">The app auto-populates with information uploaded to the dashboard and displays
-			    the information for users to read and digest</p>
+			    the information for users to read and digest. The app includes Grey Matters articles, podcasts, 
+			    events, and videos, with a learning section and glossary aimed at supporting the viewers learning 
+			    and understanding of the material. Overall, this app is designed to make scientific content less 
+			    intimidating to read. </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 text-center">
@@ -101,7 +106,9 @@
 			<img src="Gears.png" class="icon-lg" alt="Image 2">
                         <h3>The API</h3>
                         <p class="text-muted">The API allows for easy customization after handoff and also allows other developers
-			    to use our content to create their own dashboard and app tailored to their needs</p>
+			    to use our content to create their own dashboard and app tailored to their needs. This connection between
+			    the dashboard and the app allows for a seamless transition from blocks of information to well-displayed 
+			    and accessed content.</p>
                     </div>
                 </div>
             </div>
